--- a/config_e2e_single_org.yaml
+++ b/config_e2e_single_org.yaml
@@ -27,6 +27,41 @@ client:
   logging:
     level: info
 
+  # Global configuration for peer, event service and orderer timeouts
+  # if this this section is omitted, then default values will be used (same values as below)
+#  peer:
+#    timeout:
+#      connection: 10s
+#      response: 180s
+#      discovery:
+#        # Expiry period for discovery service greylist filter
+#        # The channel client will greylist peers that are found to be offline
+#        # to prevent re-selecting them in subsequent retries.
+#        # This interval will define how long a peer is greylisted
+#        greylistExpiry: 10s
+#  eventService:
+    # the below timeouts are commented out to use the default values that are found in
+    # "pkg/fab/endpointconfig.go"
+    # the client is free to override the default values by uncommenting and resetting
+    # the values as they see fit in their config file
+#    timeout:
+#      registrationResponse: 15s
+#  orderer:
+#    timeout:
+#      connection: 15s
+#      response: 15s
+#  global:
+#    timeout:
+#      query: 180s
+#      execute: 180s
+#      resmgmt: 180s
+#    cache:
+#      connectionIdle: 30s
+#      eventServiceIdle: 2m
+#      channelConfig: 30m
+#      channelMembership: 30s
+#      discovery: 10s
+#      selection: 10m
 
   # Root of the MSP directories with keys and certs.
   cryptoconfig:
@@ -57,14 +92,14 @@ client:
 
   tlsCerts:
     # [Optional]. Use system certificate pool when connecting to peers, orderers (for negotiating TLS) Default: false
-    systemCertPool: false
+    systemCertPool: true
 
     # [Optional]. Client key and cert for TLS handshake with peers and orderers
     client:
       key:
-        path: 
+        path: ${GOPATH}/src/github.com/hyperledger/fabric/singlepeer/crypto-config/peerOrganizations/org1.trias.com/users/User1@org1.trias.com/tls/client.key
       cert:
-        path: 
+        path: ${GOPATH}/src/github.com/hyperledger/fabric/singlepeer/crypto-config/peerOrganizations/org1.trias.com/users/User1@org1.trias.com/tls/client.crt
 
 #
 # [Optional]. But most apps would have this section so that channel objects can be constructed
@@ -73,42 +108,37 @@ client:
 #
 channels:
 
-  #[Required if _default not defined; Optional if _default defined]. 
-  # name of the channel
-  trias:
+  # multi-org test channel
+  orgchannel:
 
-    # list of orderers designated by the application to use for transactions on this
-    # channel. This list can be a result of access control ("FBI" can only access "ordererA"), or
-    # operational decisions to share loads from applications among the orderers.  The values must
-    # be "names" of orgs defined under "organizations/peers"
-    # deprecated: not recommended, to override any orderer configuration items, entity matchers should be used.
-#    orderers:
-#      - orderer.trias.com
-
-    #[Required if _default peers not defined; Optional if _default peers defined].
-    # list of peers from participating orgs
     peers:
       peer0.org1.trias.com:
-        # [Optional]. will this peer be sent transaction proposals for endorsement? The peer must
-        # have the chaincode installed. The app can also use this property to decide which peers
-        # to send the chaincode install request. Default: true
         endorsingPeer: true
-
-        # [Optional]. will this peer be sent query proposals? The peer must have the chaincode
-        # installed. The app can also use this property to decide which peers to send the
-        # chaincode install request. Default: true
         chaincodeQuery: true
-
-        # [Optional]. will this peer be sent query proposals that do not require chaincodes, like
-        # queryBlock(), queryTransaction(), etc. Default: true
         ledgerQuery: true
-
-        # [Optional]. will this peer be the target of the SDK's listener registration? All peers can
-        # produce events but the app typically only needs to connect to one to listen to events.
-        # Default: true
         eventSource: true
 
- 
+
+    # [Optional]. The application can use these options to perform channel operations like retrieving channel
+    # config etc.
+    policies:
+      #[Optional] options for retrieving channel configuration blocks
+      queryChannelConfig:
+        #[Optional] min number of success responses (from targets/peers)
+        minResponses: 1
+        #[Optional] channel config will be retrieved for these number of random targets
+        maxTargets: 1
+        #[Optional] retry options for query config block
+        retryOpts:
+          #[Optional] number of retry attempts
+          attempts: 5
+          #[Optional] the back off interval for the first retry attempt
+          initialBackoff: 500ms
+          #[Optional] the maximum back off interval for any retry attempt
+          maxBackoff: 5s
+          #[Optional] he factor by which the initial back off period is exponentially incremented
+          backoffFactor: 2.0
+
 #
 # list of participating organizations in this network
 #
@@ -130,22 +160,29 @@ organizations:
     certificateAuthorities:
       - ca.org1.trias.com
 
-  # the profile will contain public information about organizations other than the one it belongs to.
-  # These are necessary information to make transaction lifecycles work, including MSP IDs and
-  # peers with a public URL to send transaction proposals. The file will not contain private
-  # information reserved for members of the organization, such as admin key and certificate,
-  # blockchain-ca registrar enroll ID and secret, etc.
-  
-
-
 #
 # List of orderers to send transaction and channel create/update requests to. For the time
 # being only one orderer is needed. If more than one is defined, which one get used by the
 # SDK is implementation specific. Consult each SDK's documentation for its handling of orderers.
 #
 orderers:
+  _default:
+    # common orderer config items between all the orderers in  config
+    # these are standard properties defined by the gRPC library
+    # they will be passed in as-is to gRPC client constructor
+    grpcOptions:
+      # These parameters should be set in coordination with the keepalive policy on the server,
+      # as incompatible settings can result in closing of connection.
+      # When duration of the 'keep-alive-time' is set to 0 or less the keep alive client parameters are disabled
+      keep-alive-time: 0s
+      keep-alive-timeout: 20s
+      keep-alive-permit: false
+      fail-fast: false
+      # allow-insecure will be taken into consideration if address has no protocol defined, if true then grpc or else grpcs
+      allow-insecure: false
+
   orderer.trias.com:
-    url: localhost:7050
+    url: orderer.trias.com:7050
 
     # these are standard properties defined by the gRPC library
     # they will be passed in as-is to gRPC client constructor
@@ -170,12 +207,9 @@ orderers:
 # and event listener registration.
 #
 peers:
-  peer0.org1.trias.com:
-    # this URL is used to send endorsement and query requests
-    url: peer0.org1.trias.com:7051
-
+  _default:
+    #common grpc options between all the peers
     grpcOptions:
-      ssl-target-name-override: peer0.org1.trias.com
       # These parameters should be set in coordination with the keepalive policy on the server,
       # as incompatible settings can result in closing of connection.
       # When duration of the 'keep-alive-time' is set to 0 or less the keep alive client parameters are disabled
@@ -186,9 +220,18 @@ peers:
       # allow-insecure will be taken into consideration if address has no protocol defined, if true then grpc or else grpcs
       allow-insecure: false
 
+  peer0.org1.trias.com:
+    # this URL is used to send endorsement and query requests
+    url: peer0.org1.trias.com:7051
+
+    grpcOptions:
+      ssl-target-name-override: peer0.org1.trias.com
+
     tlsCACerts:
       # Certificate location absolute path
       path: ${GOPATH}/src/github.com/hyperledger/fabric/singlepeer/crypto-config/peerOrganizations/org1.trias.com/tlsca/tlsca.org1.trias.com-cert.pem
+
+
 #
 # Fabric-CA is a special kind of Certificate Authority provided by Hyperledger Fabric which allows
 # certificate management to be done via REST APIs. Application may choose to use a standard
@@ -215,13 +258,14 @@ certificateAuthorities:
     # [Optional] The optional name of the CA.
     caName: ca.org1.trias.com
 
+
 entityMatchers:
+
   peer:
     - pattern: peer0.org1.trias.com
       urlSubstitutionExp: localhost:7051
       sslTargetOverrideUrlSubstitutionExp: peer0.org1.trias.com
       mappedHost: peer0.org1.trias.com
-
 
   orderer:
     - pattern: orderer.trias.com
